Dashboard spacing has been fixed
Might need to tweak a few things there and there though

--- a/src/Sass/styles.sass
+++ b/src/Sass/styles.sass
@@ -57,17 +57,27 @@ html
     height: 85vh
     background: 464646
     background: green
+    display: flex
+    flex-direction: column
+    justify-content: stretch
+    align-items: center
     float: left
 
     .navSpacerOne
         width: 100%
-        height: 50px
+        height: 4vh
         // background: red
         float: left
 
-    .navSpacerTwo
+    // .navSpacerTwo
+    //     width: 100%
+    //     height: 10px
+    //     // background: red
+    //     float: left
+
+    .navSpacerThree
         width: 100%
-        height: 42%
+        height: 35vh
         // background: red
         float: left
 
@@ -82,12 +92,9 @@ html
 
 
 
-        
 
 
-
-
-// Section 3
+// Section 3/ main container
 .mainContent
     width: 80%
     height: 85vh
@@ -95,12 +102,15 @@ html
     // background: 464646
     float: left
 
+
+    // Section 4
     .leagueLeadersContainer
         width: 100%
-        height: 24vh
+        height: 22vh
         background: blue
         
         .leagueLeadersText
+            margin: 10px 0px
             color: white
             float: left
 
@@ -132,16 +142,19 @@ html
             background: red
             float: left
 
-// Section 4
+
+
+// Section 5
 .introContainer
     width: 100%
-    height: 20vh
+    height: 18vh
     padding-top: 10px
     // background: #818181
     background: red
     float: left
 
     .introHeading
+        margin: 5px 0px
         color: white
         float: left
 
@@ -149,16 +162,16 @@ html
         max-width: 90%
         font-size: larger
         line-height: 180%
-        margin-left: 30px
+        margin-left: 35px
         margin-top: 0
         color: white
         text-align: left
         float: left
 
-// Section 5
+// Section 6
 .chartsContainer
     width: 100%
-    height: 34vh
+    height: 38vh
     background: blue
     float: left
 
@@ -191,7 +204,7 @@ html
             border: 2px solid white
             border-radius: 100%
 
-// Section 6
+// Section 7
 .footer
     width: 100%
     height: 6vh
